After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747921 - "Home folder" shortcut no longer works
"Home folder" shortcut no longer works
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
3.17.x
Other Linux
: Normal normal
: 3.18
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-04-15 14:03 UTC by Mantas Mikulėnas (grawity)
Modified: 2015-04-23 14:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
application: add G_APPLICATION_HANDLES_OPEN (1.03 KB, patch)
2015-04-23 14:04 UTC, Carlos Soriano
committed Details | Review

Description Mantas Mikulėnas (grawity) 2015-04-15 14:03:59 UTC
The "Home folder" shortcut key no longer opens anything; the following call is seen on DBus when I press the shortcut key:

method call time=1429106373.384994 sender=:1.6 -> destination=org.gnome.Nautilus serial=1567 path=/org/gnome/Nautilus; interface=org.freedesktop.Application; member=Open
   array [
      string "file:///home/grawity"
   ]
   array [
      dict entry(
         string "desktop-startup-id"
         variant string "gnome-settings-daemon-884-rain-nautilus-15_TIME56965983"
      )
   ]
error time=1429106373.385511 sender=:1.720 -> destination=:1.6 error_name=org.freedesktop.DBus.Error.NotSupported reply_serial=1567
   string "Application does not open files"

(:1.6 is gnome-settings-daemon)

nautilus 3.16.0.r18.g92fcedc
Comment 1 Carlos Soriano 2015-04-15 14:17:08 UTC
It's working here... not sure why that's happening.
What's the home folder shortcut exactly?

In any case, I would say it's gnome-settings-daemon fault
Comment 2 Mantas Mikulėnas (grawity) 2015-04-15 14:36:57 UTC
It's one of the built-in shortcuts, in Control Center → Keyboard → Shortcuts → Launchers → "Home folder".

[I found do_home_key_action() at plugins/media-keys/gsd-media-keys-manager.c:873; gnome-settings-daemon apparently just calls gtk_show_uri(file:///home/grawity), which sounds like it should work?]

It's not just that shortcut apparently; "gvfs-open /home/grawity" has the same result. (Nautilus 3.16.0 works, git master doesn't.)
Comment 3 Carlos Soriano 2015-04-15 14:42:54 UTC
(In reply to Mantas Mikulėnas from comment #2)
> It's one of the built-in shortcuts, in Control Center → Keyboard → Shortcuts
> → Launchers → "Home folder".
> 
> [I found do_home_key_action() at
> plugins/media-keys/gsd-media-keys-manager.c:873; gnome-settings-daemon
> apparently just calls gtk_show_uri(file:///home/grawity), which sounds like
> it should work?]
> 
> It's not just that shortcut apparently; "gvfs-open /home/grawity" has the
> same result. (Nautilus 3.16.0 works, git master doesn't.)

Ah, that explains lot of things. you put the version as 3.16 (and I just noticed there is no 3.18)

Yeah I changed things there in master, I will take a look.
Comment 4 Carlos Soriano 2015-04-22 18:58:24 UTC
Need to handle open, pushed a fix
Comment 5 Mantas Mikulėnas (grawity) 2015-04-22 20:35:06 UTC
Still seeing the same error... I think it also needs G_APPLICATION_HANDLES_OPEN in nautilus_application_new(), which used to be there previously?
Comment 6 Carlos Soriano 2015-04-23 13:34:45 UTC
(In reply to Mantas Mikulėnas from comment #5)
> Still seeing the same error... I think it also needs
> G_APPLICATION_HANDLES_OPEN in nautilus_application_new(), which used to be
> there previously?

whops right, thanks!
Comment 7 Carlos Soriano 2015-04-23 14:04:41 UTC
Created attachment 302217 [details] [review]
application: add G_APPLICATION_HANDLES_OPEN

Commit 9f92f73e555c73 tried to handle open files, but forgot
to register the application as handling files.
Add G_APPLICATION_HANDLES_OPEN to do so.
Comment 8 Carlos Soriano 2015-04-23 14:05:24 UTC
Attachment 302217 [details] pushed as 55e1877 - application: add G_APPLICATION_HANDLES_OPEN