application: add G_APPLICATION_HANDLES_OPEN

Commit 9f92f73e555c73 tried to handle open files, but forgot
to register the application as handling files.
Add G_APPLICATION_HANDLES_OPEN to do so.

https://bugzilla.gnome.org/show_bug.cgi?id=747921