src/nautilus-application.c
@@ -1215,7 +1215,7 @@ nautilus_application_new (void)
 {
 	return g_object_new (NAUTILUS_TYPE_APPLICATION,
 			     "application-id", "org.gnome.Nautilus",
-			     "flags", G_APPLICATION_HANDLES_COMMAND_LINE,
+			     "flags", G_APPLICATION_HANDLES_COMMAND_LINE | G_APPLICATION_HANDLES_OPEN,
 			     "inactivity-timeout", 12000,
 			     "register-session", TRUE,
 			     NULL);
